--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 			<li><a target="_blank" href="home.html">Головна</a></li>
 			<li><a target="_blank" href="branches.html">Філіали</a></li>
 			<li><a target="_blank" href="contact.html">Контакти</a></li>
+			<li><a target="_blank" href="blog.html">Блог</a></li>
 			<li><a target="_blank" href="faq.html">Питання</a></li>
 			<li><a target="_blank" href="articles.html">Стаття</a></li>
 		</ol>
-		<!-- <h2>Попапи:</h2>
-			<ol class="rootpage__list">
-				<li><a target="_blank" href="home.html#"></a></li>
-			</ol> -->
+		<h2>Попапи:</h2>
+		<ol class="rootpage__list">
+			<li><a target="_blank" href="home.html#popup">Попап з формою</a></li>
+		</ol>
 
 		<div class="rootpage__contacts">
 			<h2>Мої контакти:</h2>
