--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html#popup">Попап з формою</a></li>
+			<li><a target="_blank" href="home.html#login">Попап з логін</a></li>
 		</ol>
 
 		<div class="rootpage__contacts">
 			<h2>Мої контакти:</h2>
 			<p>Пошта: <a href="pavlodahulich@gmail.com">pavlodahulich@gmail.com</a></p>
-			<p>Телефон: <a href="tel:+380684110121">+38 (068) 411 0 121></p>
+			<p>Телефон: <a href="tel:+380684110121">+38 (068) 411 0 121</p>
 		</div>
 	</div>
 </body>
