--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240604010243">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240604120553">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -457,7 +457,7 @@
 							Введіть ваші особисті дані. Всі введені дані
 							конфіденційні
 						</p>
-					</div>
+					</div>т
 					<div class="popup__body">
 						<div class="popup__l-lines">
 							<div class="popup__l-login">
@@ -483,7 +483,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240604010243"></script>
+	<script src="js/app.min.js?_v=20240604120553"></script>
 </body>
 
 </html>
