--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240604120553">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240605111814">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -601,7 +601,7 @@
 							Введіть ваші особисті дані. Всі введені дані
 							конфіденційні
 						</p>
-					</div>т
+					</div>
 					<div class="popup__body">
 						<div class="popup__l-lines">
 							<div class="popup__l-login">
@@ -627,7 +627,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240604120553"></script>
+	<script src="js/app.min.js?_v=20240605111814"></script>
 </body>
 
 </html>
