--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240605111814">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240610110014">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -151,12 +151,14 @@
 								<button type="button" class="tabs__title">
 									Волонтерська діяльність <span></span>
 								</button>
+								<button type="button" class="tabs__title all-categorry">
+									Всі категорії статтей <span></span>
+								</button>
 								<button type="button" class="tabs__title">
 									Цікава інформація <span></span>
 								</button>
 							</nav>
 						</div>
-
 						<div data-tabs-body class="tabs__content">
 							<div class="tabs__body">
 								<ul class="blog__list">
@@ -529,9 +531,13 @@
 								Новити з категорії "Влолонтерська
 								діяльність"
 							</div>
+							<div class="tabs__body all-categorry">
+								Новити з категорії "Всі категорї статтей"
+							</div>
 							<div class="tabs__body">
 								Новити з категорії "Цікава інформація"
 							</div>
+
 						</div>
 					</div>
 					<button type="button" class="our-blog__btn btn">
@@ -681,7 +687,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240605111814"></script>
+	<script src="js/app.min.js?_v=20240610110014"></script>
 </body>
 
 </html>
