--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240605111814">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240610110014">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -121,7 +121,8 @@
 						<h1 class="hero__ttl ttl">
 							5 Mедични центрів в трьох містах України
 						</h1>
-						<p>Чекаємо на всіх, кому потрібна наша допомога.</p>
+						<p>Чекаємо на всіх, кому потрібна наша допомога.
+						</p>
 						<button type="button" class="hero__btn btn">
 							Детальніше
 						</button>
@@ -129,6 +130,9 @@
 				</div>
 				<div class="hero__bg">
 					<img src="img/hero/image_01.webp" alt="background image" />
+				</div>
+				<div class="hero__mob-bg">
+					<img src="img/hero/mob-bg.webp" alt="background image" />
 				</div>
 			</section>
 			<section class="about">
@@ -716,7 +720,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240605111814"></script>
+	<script src="js/app.min.js?_v=20240610110014"></script>
 </body>
 
 </html>
