--- a/branches.html
+++ b/branches.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240605111814">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240610110014">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,6 +140,9 @@
 				</div>
 				<div class="hero__bg">
 					<img src="img/hero/image_01.webp" alt="background image" />
+				</div>
+				<div class="hero__mob-bg">
+					<img src="img/hero/mob-bg.webp" alt="background image" />
 				</div>
 			</section>
 			<section class="about">
@@ -968,7 +971,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240605111814"></script>
+	<script src="js/app.min.js?_v=20240610110014"></script>
 </body>
 
 </html>
