--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240610110014">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240610113350">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,7 +144,7 @@
 							<p>5 Mедичних центрів на території України</p>
 						</div>
 					</div>
-					<div class="centars__wrapper">
+					<div class="centers__wrapper">
 						<h3 class="centers__city-label">
 							Mедичні центри в м. Харків
 						</h3>
@@ -339,21 +339,21 @@
 							</li>
 						</ul>
 					</div>
-					<div class="centars__wrapper">
+					<div class="centers__wrapper">
 						<h3 class="centers__city-label">
 							Mедичний центр в м. Львів
 						</h3>
-						<ul class="centers__list">
+						<ul class="centers__list one">
 							<li>
 								<article class="centers__card centers__card--t-l">
 									<figure>
 										<img src="img/centers/image_04.webp" alt="centers" />
 									</figure>
 									<div class="centers__info">
-										<p data-da=".centers__card--t-l,991.98,0" class="centers__partner">
+										<p data-da=".centers__card--t-l,767.98,0" class="centers__partner">
 											Партнер
 										</p>
-										<h3 data-da=".centers__card--t-l,991.98,1" class="centers__sub-ttl sub-ttl">
+										<h3 data-da=".centers__card--t-l,767.98,1" class="centers__sub-ttl sub-ttl">
 											ТОВ «МЦГЗ «Інновація»
 										</h3>
 
@@ -411,21 +411,21 @@
 							</li>
 						</ul>
 					</div>
-					<div class="centars__wrapper">
+					<div class="centers__wrapper">
 						<h3 class="centers__city-label">
 							Mедичний центр в м. Кременчук
 						</h3>
-						<ul class="centers__list">
+						<ul class="centers__list one">
 							<li>
 								<article class="centers__card centers__card--t-k">
 									<figure>
 										<img src="img/centers/image_05.webp" alt="centers" />
 									</figure>
 									<div class="centers__info">
-										<p data-da=".centers__card--t-k,991.98,0" class="centers__partner">
+										<p data-da=".centers__card--t-k,767.98,0" class="centers__partner">
 											Партнер
 										</p>
-										<h3 data-da=".centers__card--t-k,991.98,1" class="centers__sub-ttl sub-ttl">
+										<h3 data-da=".centers__card--t-k,767.98,1" class="centers__sub-ttl sub-ttl">
 											ТОВ МЦ «Кременчуцький»
 										</h3>
 
@@ -627,7 +627,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.min.js?_v=20240610110014"></script>
+	<script src="js/app.min.js?_v=20240610113350"></script>
 </body>
 
 </html>
