--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240610113350">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240611155323">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header header--white" data-lp>
+		<header class="header header--white" data-lp data-scroll="30">
 			<div data-da=".menu__body,991.98,9" class="header__top">
 				<a href="mailto:alternativa.mc@ukr.net" class="header__link _icon-email"><span>alternativa.mc@ukr.net</span></a>
 				<a href="tel:+380508593343" class="header__link _icon-phone"><span>+38(050)-859-33-43</span></a>
@@ -43,7 +43,7 @@
 			</div>
 			<div class="header__container">
 				<div class="header__body">
-					<a href="#" class="header__logo"><img src="img/logo.svg" alt="logo" /></a>
+					<a href="index.html" class="header__logo"><img src="img/logo.svg" alt="logo" /></a>
 					<div class="header__menu menu">
 						<nav class="menu__body">
 							<div class="menu__mobile">
@@ -56,8 +56,9 @@
 									<a href="#" class="menu__link">Головна</a>
 								</li>
 								<li class="menu__item">
-									<a href="#" class="menu__link arrow">Медичні центри</a>
-									<span class="menu__arrow _icon-arrow-down"></span>
+									<a href="#" class="menu__link arrow">Медичні центри
+										<span class="menu__arrow _icon-arrow-down"></span></a>
+
 									<ul class="menu__sub-list">
 										<li>
 											<a href="#">
@@ -88,7 +89,6 @@
 											</a>
 										</li>
 									</ul>
-
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link">Питання</a>
@@ -202,7 +202,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Які довідки потрібні для початку лікування методом Замісної підтримувальної терапії?<i></i>
+								Які довідки потрібні для початку лікування
+								методом Замісної підтримувальної терапії?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -217,7 +218,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Як відбувається підвищення дозування і на скільки мг?<i></i>
+								Як відбувається підвищення дозування і на
+								скільки мг?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -232,7 +234,9 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Скільки коштує послуга експрес-тестування на виявлення ВІЛ-інфекції та/або вірусу гепатиту С?<i></i>
+								Скільки коштує послуга експрес-тестування на
+								виявлення ВІЛ-інфекції та/або вірусу
+								гепатиту С?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -247,7 +251,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Які довідки потрібні для початку лікування методом Замісної підтримувальної терапії?<i></i>
+								Які довідки потрібні для початку лікування
+								методом Замісної підтримувальної терапії?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -262,7 +267,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Терміни для здачі тесту і надання залишків?<i></i>
+								Терміни для здачі тесту і надання
+								залишків?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -277,7 +283,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Які довідки потрібні для початку лікування методом Замісної підтримувальної терапії?<i></i>
+								Які довідки потрібні для початку лікування
+								методом Замісної підтримувальної терапії?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -292,7 +299,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Як відбувається підвищення дозування і на скільки мг?<i></i>
+								Як відбувається підвищення дозування і на
+								скільки мг?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -307,7 +315,9 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Скільки коштує послуга експрес-тестування на виявлення ВІЛ-інфекції та/або вірусу гепатиту С?<i></i>
+								Скільки коштує послуга експрес-тестування на
+								виявлення ВІЛ-інфекції та/або вірусу
+								гепатиту С?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -322,7 +332,8 @@
 						</details>
 						<details class="spollers__item">
 							<summary class="spollers__title">
-								Які довідки потрібні для початку лікування методом Замісної підтримувальної терапії?<i></i>
+								Які довідки потрібні для початку лікування
+								методом Замісної підтримувальної терапії?<i></i>
 							</summary>
 							<div class="spollers__body">
 								<p>
@@ -482,8 +493,7 @@
 			</div>
 		</div>
 	</div>
-
-	<script src="js/app.min.js?_v=20240610113350"></script>
+	<script src="js/app.min.js?_v=20240611155323"></script>
 </body>
 
 </html>
