--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240610113350">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240611155323">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header header--white" data-lp>
+		<header class="header header--white" data-lp data-scroll="30">
 			<div data-da=".menu__body,991.98,9" class="header__top">
 				<a href="mailto:alternativa.mc@ukr.net" class="header__link _icon-email"><span>alternativa.mc@ukr.net</span></a>
 				<a href="tel:+380508593343" class="header__link _icon-phone"><span>+38(050)-859-33-43</span></a>
@@ -43,7 +43,7 @@
 			</div>
 			<div class="header__container">
 				<div class="header__body">
-					<a href="#" class="header__logo"><img src="img/logo.svg" alt="logo" /></a>
+					<a href="index.html" class="header__logo"><img src="img/logo.svg" alt="logo" /></a>
 					<div class="header__menu menu">
 						<nav class="menu__body">
 							<div class="menu__mobile">
@@ -56,8 +56,9 @@
 									<a href="#" class="menu__link">Головна</a>
 								</li>
 								<li class="menu__item">
-									<a href="#" class="menu__link arrow">Медичні центри</a>
-									<span class="menu__arrow _icon-arrow-down"></span>
+									<a href="#" class="menu__link arrow">Медичні центри
+										<span class="menu__arrow _icon-arrow-down"></span></a>
+
 									<ul class="menu__sub-list">
 										<li>
 											<a href="#">
@@ -88,7 +89,6 @@
 											</a>
 										</li>
 									</ul>
-
 								</li>
 								<li class="menu__item">
 									<a href="#" class="menu__link">Питання</a>
@@ -142,7 +142,6 @@
 							<div class="tabs__select">
 								<span class="tabs__selected">Медична галузь</span>
 								<div class="tabs__caret _icon-arrow-down"></div>
-
 							</div>
 							<nav data-tabs-titles class="tabs__navigation">
 								<button type="button" class="tabs__title _tab-active">
@@ -537,7 +536,6 @@
 							<div class="tabs__body">
 								Новити з категорії "Цікава інформація"
 							</div>
-
 						</div>
 					</div>
 					<button type="button" class="our-blog__btn btn">
@@ -686,8 +684,7 @@
 			</div>
 		</div>
 	</div>
-
-	<script src="js/app.min.js?_v=20240610113350"></script>
+	<script src="js/app.min.js?_v=20240611155323"></script>
 </body>
 
 </html>
