--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240611155323">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240611165616">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +17,13 @@
 	<div class="wrapper">
 		<header class="header header--white" data-lp data-scroll="30">
 			<div data-da=".menu__body,991.98,9" class="header__top">
-				<a href="mailto:alternativa.mc@ukr.net" class="header__link _icon-email"><span>alternativa.mc@ukr.net</span></a>
-				<a href="tel:+380508593343" class="header__link _icon-phone"><span>+38(050)-859-33-43</span></a>
+				<a href="mailto:alternativa.mc@ukr.net" class="header__link">
+					<i><img src="img/icons/email-h.svg" alt="icon" /></i>
+					<span>alternativa.mc@ukr.net</span>
+				</a>
+				<a href="tel:+380508593343" class="header__link">
+					<i><img src="img/icons/phone-h.svg" alt="icon" /></i>
+					<span>+38(050)-859-33-43</span></a>
 				<ul class="header__social">
 					<li>
 						<a href="#">
@@ -620,7 +625,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240611155323"></script>
+	<script src="js/app.min.js?_v=20240611165616"></script>
 </body>
 
 </html>
